--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-router-mock": "^0.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
