--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-share": "^5.1.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
