--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@strapi/blocks-react-renderer": "^1.0.1",
+    "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
     "next": "14.2.8",
@@ -20,6 +21,12 @@
     "react-loading-skeleton": "^3.4.0",
     "react-share": "^5.1.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
