--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
+    "sharp": "^0.34.2",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
